--- a/CloudCreamer/FlappahBird/FlappahBird/FlappahBird.csproj
+++ b/CloudCreamer/FlappahBird/FlappahBird/FlappahBird.csproj
@@ -1,20 +1,20 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
-    <ProjectGuid>{EF4F2F78-9110-40FD-8F73-963B09F5B30C}</ProjectGuid>
+    <ProjectGuid>{852E3DE6-032B-4597-A5C8-045AA803A1AB}</ProjectGuid>
     <ProjectTypeGuids>{6D335F3A-9D43-41b4-9D22-F6F17C4BE596};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">x86</Platform>
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>CloudCreamer</RootNamespace>
-    <AssemblyName>CloudCreamer</AssemblyName>
+    <RootNamespace>FlappahBird</RootNamespace>
+    <AssemblyName>FlappahBird</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <TargetFrameworkProfile>Client</TargetFrameworkProfile>
     <XnaFrameworkVersion>v4.0</XnaFrameworkVersion>
     <XnaPlatform>Windows</XnaPlatform>
     <XnaProfile>HiDef</XnaProfile>
-    <XnaCrossPlatformGroupID>e54e4ea2-06dd-42f5-84c1-e11b5c08932d</XnaCrossPlatformGroupID>
+    <XnaCrossPlatformGroupID>4f57fdad-55b9-4017-9192-6ca509093680</XnaCrossPlatformGroupID>
     <XnaOutputType>Game</XnaOutputType>
     <ApplicationIcon>Game.ico</ApplicationIcon>
     <Thumbnail>GameThumbnail.png</Thumbnail>
@@ -107,21 +107,20 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Enemy.cs" />
-    <Compile Include="EnemyManager.cs" />
-    <Compile Include="PlayerCloud.cs" />
+    <Compile Include="PlayerBird.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Game1.cs" />
     <Compile Include="Sprite.cs" />
+    <Compile Include="TubeGenerator.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Game.ico" />
     <Content Include="GameThumbnail.png" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\CloudCreamerContent\CloudCreamerContent.contentproj">
-      <Name>CloudCreamerContent</Name>
+    <ProjectReference Include="..\FlappahBirdContent\FlappahBirdContent.contentproj">
+      <Name>FlappahBirdContent</Name>
       <XnaReferenceType>Content</XnaReferenceType>
     </ProjectReference>
   </ItemGroup>
