Added movement to the bird

--- a/CloudCreamer/FlappahBird/FlappahBird/FlappahBird.csproj
+++ b/CloudCreamer/FlappahBird/FlappahBird/FlappahBird.csproj
@@ -107,6 +107,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Earth.cs" />
     <Compile Include="PlayerBird.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
