--- a/CloudCreamer/FlappahBird/FlappahBird/FlappahBird.csproj
+++ b/CloudCreamer/FlappahBird/FlappahBird/FlappahBird.csproj
@@ -108,12 +108,15 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Earth.cs" />
+    <Compile Include="EarthManager.cs" />
     <Compile Include="PlayerBird.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Game1.cs" />
+    <Compile Include="SoundManager.cs" />
     <Compile Include="Sprite.cs" />
-    <Compile Include="TubeGenerator.cs" />
+    <Compile Include="Tube.cs" />
+    <Compile Include="TubeManager.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Game.ico" />
