Made Tubes in front of Earth

--- a/CloudCreamer/FlappahBird/FlappahBird/FlappahBird.csproj
+++ b/CloudCreamer/FlappahBird/FlappahBird/FlappahBird.csproj
@@ -107,6 +107,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CollisionManager.cs" />
     <Compile Include="Earth.cs" />
     <Compile Include="EarthManager.cs" />
     <Compile Include="PlayerBird.cs" />
