--- a/CloudCreamer/SuperMarioBros3/SuperMarioBros3/SuperMarioBros3.csproj
+++ b/CloudCreamer/SuperMarioBros3/SuperMarioBros3/SuperMarioBros3.csproj
@@ -108,12 +108,16 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Camera.cs" />
+    <Compile Include="ExplosionManager.cs" />
+    <Compile Include="Managers\Content_Manager.cs" />
+    <Compile Include="Managers\SoundManager.cs" />
     <Compile Include="Map.cs" />
     <Compile Include="Player.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Game1.cs" />
     <Compile Include="RectangleHelper.cs" />
+    <Compile Include="SpriteAnimation.cs" />
     <Compile Include="Tile.cs" />
   </ItemGroup>
   <ItemGroup>
