--- a/CloudCreamer/SuperMarioBros3/SuperMarioBros3/SuperMarioBros3.csproj
+++ b/CloudCreamer/SuperMarioBros3/SuperMarioBros3/SuperMarioBros3.csproj
@@ -108,6 +108,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Camera.cs" />
+    <Compile Include="CoinManager.cs" />
     <Compile Include="EntityManager.cs" />
     <Compile Include="MushroomEnemy.cs" />
     <Compile Include="ExplosionManager.cs" />
