--- a/CloudCreamer/SuperMarioBros3/SuperMarioBros3/SuperMarioBros3.csproj
+++ b/CloudCreamer/SuperMarioBros3/SuperMarioBros3/SuperMarioBros3.csproj
@@ -110,6 +110,7 @@
     <Compile Include="Camera.cs" />
     <Compile Include="Castle.cs" />
     <Compile Include="CoinManager.cs" />
+    <Compile Include="CollisionManager.cs" />
     <Compile Include="EntityManager.cs" />
     <Compile Include="Flagpole.cs" />
     <Compile Include="MushroomEnemy.cs" />
